--- a/catalog/spatial/wfs/1.1.0/spatial-wfs-v1_1_0-converter/pom.xml
+++ b/catalog/spatial/wfs/1.1.0/spatial-wfs-v1_1_0-converter/pom.xml
@@ -4,7 +4,7 @@
  * Copyright (c) Codice Foundation
  *
  * This is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either
- * version 3 of the License, or any later version. 
+ * version 3 of the License, or any later version.
  *
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  * See the GNU Lesser General Public License for more details. A copy of the GNU Lesser General Public License is distributed along with this program and can be found at
@@ -69,20 +69,12 @@
             <artifactId>spatial-ogc-common</artifactId>
             <exclusions>
                 <exclusion>
-                    <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                     <groupId>org.apache.cxf</groupId>
+                    <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>ddf.security.core</groupId>
                     <artifactId>security-core-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.cxf</groupId>
-                    <artifactId>cxf-rt-rs-security-xml</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.cxf</groupId>
-                    <artifactId>cxf-rt-rs-security-sso-saml</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -90,6 +82,7 @@
             <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-wfs-common</artifactId>
             <exclusions>
+                <!-- FIXME: There's no cxf-api artifact anymore -->
                 <exclusion>
                     <artifactId>cxf-api</artifactId>
                     <groupId>org.apache.cxf</groupId>
@@ -101,6 +94,7 @@
             <artifactId>spatial-wfs-v1_1_0-common</artifactId>
             <version>${project.version}</version>
             <exclusions>
+                <!-- FIXME: There's no cxf-api artifact anymore -->
                 <exclusion>
                     <artifactId>cxf-api</artifactId>
                     <groupId>org.apache.cxf</groupId>
