--- a/platform/security/saml/saml-assertion-validator-impl/pom.xml
+++ b/platform/security/saml/saml-assertion-validator-impl/pom.xml
@@ -39,10 +39,6 @@
             <artifactId>platform-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>ddf.security.core</groupId>
-            <artifactId>security-core-impl</artifactId>
-        </dependency>
-        <dependency>
             <groupId>ddf.security.encryption</groupId>
             <artifactId>security-encryption-api</artifactId>
             <scope>test</scope>
@@ -55,6 +51,10 @@
             <groupId>ddf.security</groupId>
             <artifactId>security-saml-util</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-security-sso-saml</artifactId>
         </dependency>
     </dependencies>
     <build>
