Update property name

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -97,7 +97,7 @@ solr.highlight.blacklist=metacard-tags
 solr.highlight.enabled=false
 
 # Whether or not case-insensitive sorting is enabled
-solr.sort.case-insensitive=true
+solr.query.sort.caseInsensitive=true
 
 #
 # Thread Pool Settings
