Added pax-logging-api dependency to fix unit test failure

--- a/libs/test-common/pom.xml
+++ b/libs/test-common/pom.xml
@@ -184,6 +184,12 @@
             <artifactId>platform-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.logging</groupId>
+            <artifactId>pax-logging-api</artifactId>
+            <version>1.10.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
