DDF-6319 - Enable case-insensitive sorting of solr text fields (#6320)

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -96,6 +96,9 @@ solr.commit.nrt.metacardTypes=workspace,metacard.query,metacard.list,query-templ
 solr.highlight.blacklist=metacard-tags
 solr.highlight.enabled=false
 
+# Whether or not case-insensitive sorting is enabled
+solr.query.sort.caseInsensitive=true
+
 #
 # Thread Pool Settings
 #
