Update the contentDirectoryMonitor appender configuration in org.ops4j.pax.logging.cfg to match the configuration in log4j2.xml

--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -180,9 +180,8 @@ log4j2.appender.contentDirectoryMonitor.name = cdm
 log4j2.appender.contentDirectoryMonitor.fileName = ${karaf.log}/cdm.log
 log4j2.appender.contentDirectoryMonitor.filePattern = ${karaf.log}/cdm.log-%d{yyyy-MM-dd-HH}-%i.log.gz
 log4j2.appender.contentDirectoryMonitor.append = true
-log4j2.appender.contentDirectoryMonitor.ignoreExceptions = false
 log4j2.appender.contentDirectoryMonitor.layout.type = PatternLayout
-log4j2.appender.contentDirectoryMonitor.layout.pattern = [%-5p] %d{ISO8601} | %-16.16t | %-15.20c{1} |  %m%n
+log4j2.appender.contentDirectoryMonitor.layout.pattern = ${log4j2.pattern}
 log4j2.appender.contentDirectoryMonitor.policies.type = Policies
 log4j2.appender.contentDirectoryMonitor.policies.size.type = SizeBasedTriggeringPolicy
 log4j2.appender.contentDirectoryMonitor.policies.size.size = 20MB
