--- a/libs/checksum/pom.xml
+++ b/libs/checksum/pom.xml
@@ -35,6 +35,11 @@
             <version>4.3.1</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-ext</artifactId>
             <version>${org.slf4j.version}</version>
