--- a/distribution/test/itests/pom.xml
+++ b/distribution/test/itests/pom.xml
@@ -23,161 +23,172 @@
     <artifactId>itests</artifactId>
     <name>DDF :: Test :: Integration Tests</name>
     <packaging>pom</packaging>
-    <modules>
-        <module>test-itests-common</module>
-        <module>test-itests-ddf</module>
-        <module>test-itests-dependencies-app</module>
-        <module>test-itests-kernel</module>
-        <module>test-itests-ddf-core</module>
-    </modules>
-    <properties>
-        <!-- Copied from ops4j/org.ops4j.pax.exam2/4.11.0/pom/pystemStateManagerom.xml
-        Do not change these unless upgrading pax exam-->
-        <pax.tinybundles.version>2.1.1</pax.tinybundles.version>
-        <pax.url.version>2.4.5</pax.url.version>
-        <!-- End pax exam properties -->
-    </properties>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>ddf.thirdparty</groupId>
-                <artifactId>rest-assured</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.tinybundles</groupId>
-                <artifactId>tinybundles</artifactId>
-                <version>${pax.tinybundles.version}</version>
-            </dependency>
-            <!-- Start of dependencies for pax exam karaf container -->
-            <dependency>
-                <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-container-karaf</artifactId>
-                <version>${pax.exam.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-junit4</artifactId>
-                <version>${pax.exam.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam</artifactId>
-                <version>${pax.exam.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.url</groupId>
-                <artifactId>pax-url-aether</artifactId>
-                <version>${pax.url.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.inject</groupId>
-                <artifactId>javax.inject</artifactId>
-                <version>${javax.inject.version}</version>
-            </dependency>
-            <!-- End of pax exam dependencies -->
-        </dependencies>
-    </dependencyManagement>
-    <dependencies>
-        <!-- Start of dependencies for pax exam karaf container -->
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-junit4</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-        </dependency>
-        <!-- End of pax exam dependencies -->
-        <dependency>
-            <groupId>org.apache.karaf.features</groupId>
-            <artifactId>org.apache.karaf.features.core</artifactId>
-            <version>${karaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.karaf.shell</groupId>
-            <artifactId>org.apache.karaf.shell.core</artifactId>
-            <version>${karaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ddf.admin.core</groupId>
-            <artifactId>admin-core-appservice</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.osgi</groupId>
-            <artifactId>spring-osgi-core</artifactId>
-            <version>${spring-osgi.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ddf.security.policy</groupId>
-            <artifactId>security-policy-context</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ddf.catalog.core</groupId>
-            <artifactId>catalog-core-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.configadmin</artifactId>
-            <version>${felix.configadmin.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ddf.thirdparty</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.servicemix.tooling</groupId>
-                <artifactId>depends-maven-plugin</artifactId>
-                <version>${servicemix-depends.version}</version>
-                <executions>
-                    <execution>
-                        <id>generate-depends-file</id>
-                        <goals>
-                            <goal>generate-depends-file</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.servicemix.tooling</groupId>
-                                        <artifactId>depends-maven-plugin</artifactId>
-                                        <version>1.4</version>
-                                        <goals>
-                                            <goal>generate-depends-file</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <profiles>
+        <profile>
+            <!-- The itests profile is here so we can selectively skip the itest modules. We need a
+                 way to skip them because OWASP scans will report CVEs for itest dependencies if the
+                 itest modules are run. These CVEs add a bunch of noise to the OWASP reports. -->
+            <id>itests</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>test-itests-common</module>
+                <module>test-itests-ddf</module>
+                <module>test-itests-dependencies-app</module>
+                <module>test-itests-kernel</module>
+                <module>test-itests-ddf-core</module>
+            </modules>
+            <properties>
+                <!-- Copied from ops4j/org.ops4j.pax.exam2/4.11.0/pom/pystemStateManagerom.xml
+                Do not change these unless upgrading pax exam-->
+                <pax.tinybundles.version>2.1.1</pax.tinybundles.version>
+                <pax.url.version>2.4.5</pax.url.version>
+                <!-- End pax exam properties -->
+            </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>ddf.thirdparty</groupId>
+                        <artifactId>rest-assured</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ops4j.pax.tinybundles</groupId>
+                        <artifactId>tinybundles</artifactId>
+                        <version>${pax.tinybundles.version}</version>
+                    </dependency>
+                    <!-- Start of dependencies for pax exam karaf container -->
+                    <dependency>
+                        <groupId>org.ops4j.pax.exam</groupId>
+                        <artifactId>pax-exam-container-karaf</artifactId>
+                        <version>${pax.exam.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ops4j.pax.exam</groupId>
+                        <artifactId>pax-exam-junit4</artifactId>
+                        <version>${pax.exam.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ops4j.pax.exam</groupId>
+                        <artifactId>pax-exam</artifactId>
+                        <version>${pax.exam.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ops4j.pax.url</groupId>
+                        <artifactId>pax-url-aether</artifactId>
+                        <version>${pax.url.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.inject</groupId>
+                        <artifactId>javax.inject</artifactId>
+                        <version>${javax.inject.version}</version>
+                    </dependency>
+                    <!-- End of pax exam dependencies -->
+                </dependencies>
+            </dependencyManagement>
+            <dependencies>
+                <!-- Start of dependencies for pax exam karaf container -->
+                <dependency>
+                    <groupId>org.ops4j.pax.exam</groupId>
+                    <artifactId>pax-exam-junit4</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>javax.inject</groupId>
+                    <artifactId>javax.inject</artifactId>
+                </dependency>
+                <!-- End of pax exam dependencies -->
+                <dependency>
+                    <groupId>org.apache.karaf.features</groupId>
+                    <artifactId>org.apache.karaf.features.core</artifactId>
+                    <version>${karaf.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.karaf.shell</groupId>
+                    <artifactId>org.apache.karaf.shell.core</artifactId>
+                    <version>${karaf.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>ddf.admin.core</groupId>
+                    <artifactId>admin-core-appservice</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.osgi</groupId>
+                    <artifactId>spring-osgi-core</artifactId>
+                    <version>${spring-osgi.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>ddf.security.policy</groupId>
+                    <artifactId>security-policy-context</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>ddf.catalog.core</groupId>
+                    <artifactId>catalog-core-api</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>org.apache.felix.configadmin</artifactId>
+                    <version>${felix.configadmin.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>ddf.thirdparty</groupId>
+                    <artifactId>rest-assured</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.servicemix.tooling</groupId>
+                        <artifactId>depends-maven-plugin</artifactId>
+                        <version>${servicemix-depends.version}</version>
+                        <executions>
+                            <execution>
+                                <id>generate-depends-file</id>
+                                <goals>
+                                    <goal>generate-depends-file</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                        <plugin>
+                            <groupId>org.eclipse.m2e</groupId>
+                            <artifactId>lifecycle-mapping</artifactId>
+                            <version>1.0.0</version>
+                            <configuration>
+                                <lifecycleMappingMetadata>
+                                    <pluginExecutions>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>org.apache.servicemix.tooling</groupId>
+                                                <artifactId>depends-maven-plugin</artifactId>
+                                                <version>1.4</version>
+                                                <goals>
+                                                    <goal>generate-depends-file</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <ignore />
+                                            </action>
+                                        </pluginExecution>
+                                    </pluginExecutions>
+                                </lifecycleMappingMetadata>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 </project>
