DDF-6360 Fix broken CSW endpoint

--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -261,6 +261,18 @@
                                     <version>${jakarta.activation.bundle.version}</version>
                                     <outputDirectory>${setup.folder}/endorsed</outputDirectory>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.servicemix.specs</groupId>
+                                    <artifactId>org.apache.servicemix.specs.jaxb-api-2.3</artifactId>
+                                    <version>2.3_3</version>
+                                    <outputDirectory>${setup.folder}/endorsed</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.servicemix.bundles</groupId>
+                                    <artifactId>org.apache.servicemix.bundles.jaxb-runtime</artifactId>
+                                    <version>2.3.2_2</version>
+                                    <outputDirectory>${setup.folder}/endorsed</outputDirectory>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
